--- a/about.html
+++ b/about.html
@@ -225,7 +225,7 @@
       <!-- عضو 1 -->
       <div class="team-member">
         <div class="image-wrapper">
-          <img src="swing-trading-patterns.jpg"أحمد علي - خبير التداول والاستثمار" loading="lazy">
+          <img src="541985133_1936454627194820_6985951962874338169_n.jpgأحمد علي - خبير التداول والاستثمار" loading="lazy">
         </div>
         <h3>yaasser.err</h3>
         <p></p>
