--- a/about.html
+++ b/about.html
@@ -239,7 +239,7 @@
       <!-- عضو 2 -->
       <div class="team-member">
         <div class="image-wrapper">
-          <img src="team2.jpg" alt="سارة محمد - مدربة تطوير مهارات" loading="lazy">
+          <img src="541031410_1341271644282857_8273329174527709855_n.jpg" alt="سارة محمد - مدربة تطوير مهارات" loading="lazy">
         </div>
         <h3>YOUNES GLM</h3>
         <p></p>
