--- a/about.html
+++ b/about.html
@@ -253,7 +253,7 @@
       <!-- عضو 3 -->
       <div class="team-member">
         <div class="image-wrapper">
-          <img src="team3.jpg" alt="محمد حسن - محلل مالي" loading="lazy">
+          <img src="541229359_24415069048187932_1958641912115980062_n.jpg" alt="محمد حسن - محلل مالي" loading="lazy">
         </div>
         <h3>ishak lisahk</h3>
         <p></p>
