--- a/about.html
+++ b/about.html
@@ -281,7 +281,7 @@
       <!-- عضو 5 -->
       <div class="team-member">
         <div class="image-wrapper">
-          <img src="team5.jpg" alt="يوسف سعيد - مدرب استراتيجيات تداول" loading="lazy">
+          <img src="543679371_1450030012923005_2030371366783706098_n.jpg" alt="يوسف سعيد - مدرب استراتيجيات تداول" loading="lazy">
         </div>
         <h3>sofianne</h3>
         <p></p>
