--- a/about.html
+++ b/about.html
@@ -267,7 +267,7 @@
       <!-- عضو 4 -->
       <div class="team-member">
         <div class="image-wrapper">
-          <img src="team4.jpg" alt="ليلى أحمد - مصممة محتوى تعليمي" loading="lazy">
+          <img src="541970622_758934477003141_3756320016080302445_n.jpg" alt="ليلى أحمد - مصممة محتوى تعليمي" loading="lazy">
         </div>
         <h3>adeeemo gfx</h3>
         <p></p>
