--- a/course1.html
+++ b/course1.html
@@ -292,7 +292,7 @@
 
   <!-- شبكة الفيديوهات -->
   <div class="video-grid">
-    <div class="video-card"><iframe src="https://www.youtube.com/embed/ScMzIvxBSi4" allowfullscreen loading="lazy"></iframe><div class="video-title">الدرس 1: مقدمة</div></div>
+    <div class="video-card"><iframe src="https://www.youtube.com/embed/VXcxh3TDn-8" allowfullscreen loading="lazy"></iframe><div class="video-title">الدرس 1: مقدمة</div></div>
     <div class="video-card"><iframe src="https://www.youtube.com/embed/B2JJGlzO6h0" allowfullscreen loading="lazy"></iframe><div class="video-title">الدرس 2: مفهوم اسواق المال</div></div>
     <div class="video-card"><iframe src="https://www.youtube.com/embed/sBws8MSXN7A" allowfullscreen loading="lazy"></iframe><div class="video-title">الدرس 3: كيفية فتح حساب</div></div>
     <div class="video-card"><iframe src="https://www.youtube.com/embed/eX2qFMC8cFo" allowfullscreen loading="lazy"></iframe><div class="video-title">الدرس 4: المنصات</div></div>
