--- a/course1.html
+++ b/course1.html
@@ -318,7 +318,7 @@
   <div class="congrats-card" id="congrats">
     <h3>🎉 تهانينا!</h3>
     <p>مرحبا بك يا نخبة 👑 لقد أكملت الدورة بنجاح.</p>
-    <a href="https://t.me/YOUR_CHANNEL" target="_blank">انضم إلى قناتنا على التلغرام</a>
+    <a href="https://t.me/+59V4eMiHDwphMDlk" target="_blank">انضم إلى قناتنا على التلغرام</a>
   </div>
 
   <!-- الفوتر -->
