--- a/course1.html
+++ b/course1.html
@@ -302,7 +302,8 @@
     <div class="video-card"><iframe src="https://www.youtube.com/embed/JGwWNGJdvx8" allowfullscreen loading="lazy"></iframe><div class="video-title">الدرس 8: إدارة المخاطر</div></div>
     <div class="video-card"><iframe src="https://www.youtube.com/embed/3fumBcKC6RE" allowfullscreen loading="lazy"></iframe><div class="video-title">الدرس 9: نصائح عملية</div></div>
     <div class="video-card"><iframe src="https://www.youtube.com/embed/2Vv-BfVoq4g" allowfullscreen loading="lazy"></iframe><div class="video-title">الدرس 10: الخلاصة</div></div>
-    
+    </div>
+  
   <!-- بطاقة التهنئة -->
   <div class="congrats-card" id="congrats">
     <h3>🎉 تهانينا!</h3>
