--- a/course1.html
+++ b/course1.html
@@ -298,7 +298,7 @@
     <div class="video-card"><iframe src="https://www.youtube.com/embed/DvtPAfE3T8o" allowfullscreen loading="lazy"></iframe><div class="video-title">الدرس 4:pips شرح </div></div>
     <div class="video-card"><iframe src="https://www.youtube.com/embed/Jz_WXrgV79U" allowfullscreen loading="lazy"></iframe><div class="video-title">الدرس 5: شرح الهامش</div></div>
     <div class="video-card"><iframe src="https://www.youtube.com/embed/PDbSDrPwdVI" allowfullscreen loading="lazy"></iframe><div class="video-title">الدرس 6: شرح منصة التداول و شركة التداول</div></div>
-    <div class="video-card"><iframe src="https://www.youtube.com/embed/M7lc1UVf-VE" allowfullscreen loading="lazy"></iframe><div class="video-title">الدرس 7: استراتيجيات</div></div>
+    <div class="video-card"><iframe src="https://www.youtube.com/embed/hdZrjyfuXHA" allowfullscreen loading="lazy"></iframe><div class="video-title">الدرس 7: شرح الرافعة المالية</div></div>
     <div class="video-card"><iframe src="https://www.youtube.com/embed/JGwWNGJdvx8" allowfullscreen loading="lazy"></iframe><div class="video-title">الدرس 8: إدارة المخاطر</div></div>
     <div class="video-card"><iframe src="https://www.youtube.com/embed/3fumBcKC6RE" allowfullscreen loading="lazy"></iframe><div class="video-title">الدرس 9: نصائح عملية</div></div>
     <div class="video-card"><iframe src="https://www.youtube.com/embed/2Vv-BfVoq4g" allowfullscreen loading="lazy"></iframe><div class="video-title">الدرس 10: الخلاصة</div></div>
