--- a/course1.html
+++ b/course1.html
@@ -300,7 +300,7 @@
     <div class="video-card"><iframe src="https://www.youtube.com/embed/PDbSDrPwdVI" allowfullscreen loading="lazy"></iframe><div class="video-title">الدرس 6: شرح منصة التداول و شركة التداول</div></div>
     <div class="video-card"><iframe src="https://www.youtube.com/embed/hdZrjyfuXHA" allowfullscreen loading="lazy"></iframe><div class="video-title">الدرس 7: شرح الرافعة المالية</div></div>
     <div class="video-card"><iframe src="https://www.youtube.com/embed/39JVKVH5_7U" allowfullscreen loading="lazy"></iframe><div class="video-title">الدرس 8: spread</div></div>
-    <div class="video-card"><iframe src="https://www.youtube.com/embed/3fumBcKC6RE" allowfullscreen loading="lazy"></iframe><div class="video-title">الدرس 9: نصائح عملية</div></div>
+    <div class="video-card"><iframe src="https://www.youtube.com/embed/5ipXKFNYBg4" allowfullscreen loading="lazy"></iframe><div class="video-title">الدرس 9: شرح ازواج العملات</div></div>
     </div>
   
   <!-- بطاقة التهنئة -->
