--- a/index.html
+++ b/index.html
@@ -595,6 +595,7 @@
         <a href="index.html" role="menuitem" class="active">الرئيسية</a>
         <a href="about.html" role="menuitem">حولنا</a>
         <a href="contact.html" role="menuitem">اتصل بنا</a>
+        <a href="mycard.html" role="menuitem">بطاقتي</a>
         <div class="dropdown" aria-haspopup="true">
           <button class="dropbtn" aria-expanded="false">خدماتنا ▾</button>
           <div class="dropdown-content" role="menu">
@@ -615,6 +616,7 @@
         <a href="index.html" class="active">الرئيسية</a>
         <a href="about.html">حولنا</a>
         <a href="contact.html">اتصل بنا</a>
+        <a href="mycard.html"> بطاقتي</a>
         <div class="dropdown-mobile">
           <button type="button" aria-expanded="false" id="servicesToggle">خدماتنا ▾</button>
           <div class="submenu" id="servicesSubmenu">
