--- a/course33.html
+++ b/course33.html
@@ -308,7 +308,7 @@
   <div class="congrats-card" id="congrats">
     <h3>🎉 تهانينا!</h3>
     <p>مرحبا بك يا نخبة 👑 لقد أكملت الدورة بنجاح.</p>
-    <a href="https://t.me/YOUR_CHANNEL" target="_blank">انضم إلى قناتنا على التلغرام</a>
+    <a href="https://t.me/+iRtvB-vD6ChmNzc0" target="_blank">انضم إلى قناتنا على التلغرام</a>
   </div>
 
   <!-- الفوتر -->
