--- a/index.html
+++ b/index.html
@@ -701,7 +701,7 @@
             </div>
             <div class="course-content">
               <div class="badge">جديد</div>
-              <h3>VIP FOREX</h3>
+              <h3>التداول في سوق الفوركس</h3>
               <p>TRADE SMART ERAN BIG تداول النخبة يبدا من هنا</p>
               <div class="course-meta">
                 <span>المستوى: جميع المستويات</span>
